Fixed title text-align.

--- a/Modules/Content/assets/sass/style.scss
+++ b/Modules/Content/assets/sass/style.scss
@@ -49,8 +49,11 @@
             }
         }
         &.success__story {
-            p {
+            p,
+            h2 {
                 text-align: start !important;
+            }
+            p {
                 font-style: normal;
                 font-weight: normal;
                 font-size: 14px;
@@ -220,6 +223,14 @@
         background-color: $mixedYellow;
         .content__left__footer {
             background-color: $darkYellow;
+        }
+    }
+}
+
+.success__story {
+    .content__left__footer__title {
+        span {
+            font-size: 16px;
         }
     }
 }
